--- a/css/styleslogin.css
+++ b/css/styleslogin.css
@@ -1,17 +1,22 @@
+
 html,
 body {
   height: 100%;
 }
-
+.font-weigth-bold{
+ letter-spacing: 2px;
+ font-weight: bold;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 body {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #f5f5f5;
-  }
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
 
 .form-signin {
   width: 100%;
@@ -32,7 +37,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-input[type=email], select {
+.form-signin input[type="texto"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -41,7 +46,7 @@ input[type=email], select {
     border-radius: 4px;
     box-sizing: border-box;
   }
-  input[type=password], select {
+  .form-signin input[type="password"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -51,16 +56,13 @@ input[type=email], select {
     box-sizing: border-box;
   }
 
+.btn:hover {
+    background-color: #b12f9b;
+    outline: none;
+  }
 .btn {
-    width: 100%;
-    background-color: #a7294f;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    background-color:  #ca3ab2;
+    border-color: #ca3ab2;
     cursor: pointer;
-  }
-
-  input[type="submit"].btn:hover {
-    border: none;
-    border-radius: 4px;
-  }
+    
+}
