--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,37 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+div.stars {
+  width: 270px;
+  align-content: center;
+  
+}
+
+input.star { display: none; }
+
+label.star {
+  float: right;
+  padding: 10px;
+  font-size: 36px;
+  color: #444;
+  transition: all .2s;
+}
+
+input.star:checked ~ label.star:before {
+  content: '\2605';
+  color:orange;
+  transition: all .25s;
+}
+
+input.star-5:checked ~ label.star:before {
+  color: rgb(255, 217, 0);
+  text-shadow: 0 0 20px #952;
+}
+
+input.star-1:checked ~ label.star:before { color: #F62; }
+
+label.star:hover { transform: rotate(-15deg) scale(1.3); }
+
+label.star:before {
+  content: '\2605';
+}
