--- a/css/styles.css
+++ b/css/styles.css
@@ -173,3 +173,14 @@ label.star:hover { transform: rotate(-15deg) scale(1.3); }
 label.star:before {
   content: '\2605';
 }
+
+.btn:hover {
+  background-color: #b12f9b;
+  outline: none;
+}
+.btn {
+  background-color:  #ca3ab2;
+  border-color: #ca3ab2;
+  cursor: pointer;
+  
+}
